--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "campbelltowntaxicabs",
+  "homepage": "https://www.campbelltowntaxicabs.com.au",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.17",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
     "react-phone-input-2": "^2.15.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-router": "^7.9.6",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
