--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.4",
     "@emailjs/browser": "^4.4.1",
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.17",
